--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=plutusstash
+spring.datasource.url=jdbc:postgresql://aws-0-eu-north-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.nncpmcdusoohgqzozqxb
+spring.datasource.password=O0ATejvZ4MwAgH91
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
