--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+
+bootJar {
+    archiveFileName = 'plutusstash-docker-app.jar'
+}
